...
    <string name="supplements_recette">Suppléments</string>

    <string name="title_edit_recipe">Modifier recette</string>
    <string name="apply">Appliquer</string>


    <string name="map">Map</string>
    <string name="list_otacos">Liste</string>
    <string name="adresse">Adresse</string>


    <string name="tacos_title">Création de tacos</string>
    <string name="random_recipe">Créer une recette aléatoire</string>
...
    <string name="l">L (2 viandes max)</string>
    <string name="xl">XL (3 viandes max)</string>
    <string name="xxl">XXL (4 viandes max)</string>


    <!-- Description -->
    <string name="button_menu_description">Bouton qui affiche le menu des options</string>
    <string name="button_back_description">Retourne à l\'écran précédent</string>
    <string name="button_searchRecipe_desc">Recherche une recette</string>
    <string name="otacos_img_desc">Image d\'un OTacos</string>
    <string name="fav_desc">Met en favoris</string>
    <string name="confirm_suppression">Voulez-vous vraiment supprimer cette recette ?</string>
    <string name="oui">Oui</string>
...
