<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_list_otacos"
        android:title="@string/list_otacos"/>

    <item
        android:id="@+id/navigation_map_otacos"
        android:title="@string/map"/>

</menu>